--- a/src/Cards.css
+++ b/src/Cards.css
@@ -7,11 +7,10 @@
     left: 3px;
 }
 
-.CardDiv:hover {
-    margin-bottom: 50px;
-    transition: margin-bottom 0.5s;
+.CardPlayable:hover {
+  margin-bottom: 50px;
+  transition: margin-bottom 0.5s;
 }
-
 .CardDiv {
     margin-bottom: 0px;
     transition: margin-bottom 0.5s;
