--- a/src/App.css
+++ b/src/App.css
@@ -61,3 +61,9 @@
   justify-content: space-between;
   flex-direction: column;
 }
+
+.animationPlaceholderDiv {
+  position: absolute;
+  z-index: 2;
+  /*visibility: hidden;*/
+}
