--- a/src/App.css
+++ b/src/App.css
@@ -67,3 +67,48 @@
   z-index: 2;
   /*visibility: hidden;*/
 }
+
+.TurnAroundOverlay {
+  display: none;
+}
+
+@media screen and (max-height: 700px) and (orientation: landscape) {
+  .TurnAroundOverlay {
+    position:absolute;
+    z-index : 4;
+    backdrop-filter: blur(0.5);
+    background-color: rgba(255, 255, 255, 0.7);
+    width : 100%;
+    height : 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+  }
+
+  .cellphoneDiv {
+    width: 100px;
+    height: 100px;
+    color: white;
+    animation: Cellphone-TurnAround infinite 1.5s;
+  }
+
+  @keyframes Cellphone-TurnAround {
+    from {
+      transform: rotate(90deg);
+    }
+    to {
+      transform: rotate(0deg);
+    }
+  }
+
+  .cellphoneContainerEl {
+    font-size: 20px;
+    font-weight: bold;
+  }
+
+  .cellphoneContainer {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+  }
+}
